--- a/portfolio_website.html
+++ b/portfolio_website.html
@@ -21,19 +21,19 @@
     <h2>সারওয়ার জাহান</h2>
     <h3>Aspiring Web Developer</h3>
     <h5>আমি  একজন আগ্রহী ওয়েব ডেভেলপার, বর্তমানে <strong>HTML</strong>, <strong>CSS</strong> এবং <strong>Git</strong> শেখার মাধ্যমে আমার স্কিল ডেভেলপ করছি। ভবিষ্যতে একজন ফুল-স্ট্যাক ডেভেলপার হতে চাই। </h5>
-    <img src="factinfo_logo.png" alt="">
+    <img src="istockphoto-537331500-612x612.jpg" alt="">
     <button> "Download CV" / "Contact Me</button>
     </section>
-    <div id="my_skills">
+    <section id="my_skills">
         <h2 id="skills">my skills</h2>
         <ul>
             <li>html</li>
             <li>css</li>
             <li>quick learner</li>
         </ul>
-        </div> 
+    </section> 
 
-        <div>
+        <section>
             <h2>feedback form</h2>
             <form>
                 <label for="name">name:</label><br>
@@ -42,7 +42,7 @@
                 <textarea name="message" id="message" rows="4" placeholder="write something"></textarea> <br> <br>
                 <button type="submit">submit</button>
             </form>
-        </div>
+        </section>
 
         <footer>
             <p>&copy; 2025 Sarwar's Webpage. All rights reserved.</p>
